--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 notMNIST_large*
 notMNIST_small*
 notMNIST.pickle
+.idea
 
 # Windows image file caches
 Thumbs.db
@@ -50,4 +51,3 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-\.idea
